--- a/package.json
+++ b/package.json
@@ -49,38 +49,38 @@
     "rxjs": "^5.5.2 || ^6.1.0"
   },
   "devDependencies": {
-    "@angular/common": "^5.0.0 || ^6.0.0",
-    "@angular/compiler": "^5.0.0 || ^6.0.0",
-    "@angular/compiler-cli": "^5.0.0 || ^6.0.0",
-    "@angular/core": "^5.0.0 || ^6.0.0",
-    "@angular/forms": "^5.0.0 || ^6.0.0",
-    "@angular/platform-browser": "^5.0.0 || ^6.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0 || ^6.0.0",
-    "@types/jasmine": "^2.8.7",
-    "@types/node": "^10.0.6",
-    "ajv": "^6.0.0",
-    "codelyzer": "^4.3.0",
-    "core-js": "^2.5.6",
+    "@angular/common": "^6.1.7",
+    "@angular/compiler": "^6.1.7",
+    "@angular/compiler-cli": "^6.1.7",
+    "@angular/core": "^6.1.7",
+    "@angular/forms": "^6.1.7",
+    "@angular/platform-browser": "^6.1.7",
+    "@angular/platform-browser-dynamic": "^6.1.7",
+    "@types/jasmine": "^2.8.8",
+    "@types/node": "^10.10.1",
+    "ajv": "^6.5.3",
+    "codelyzer": "^4.4.4",
+    "core-js": "^2.5.7",
     "istanbul-instrumenter-loader": "^3.0.1",
-    "jasmine-core": "^3.1.0",
-    "karma": "^2.0.2",
+    "jasmine-core": "^3.2.1",
+    "karma": "^3.0.0",
     "karma-coverage": "^1.1.2",
-    "karma-coverage-istanbul-reporter": "^1.4.2",
+    "karma-coverage-istanbul-reporter": "^1.4.3",
     "karma-jasmine": "^1.1.2",
     "karma-mocha-reporter": "^2.2.5",
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^3.0.0",
+    "karma-webpack": "^3.0.5",
     "loader-utils": "^1.1.0",
     "reflect-metadata": "^0.1.12",
-    "rxjs": "^5.5.2 || ^6.1.0",
-    "source-map-loader": "^0.2.3",
+    "rxjs": "^6.3.2",
+    "source-map-loader": "^0.2.4",
     "ts-helpers": "^1.1.2",
     "ts-loader": "4.3.0",
-    "tslint": "^4.0.0 || ^5.10.0",
-    "typescript": ">=2.4.2 || <2.8",
-    "webpack": "^4.8.1",
-    "webpack-cli": "^2.1.3",
+    "tslint": "^5.11.0",
+    "typescript": "^3.0.3",
+    "webpack": "^4.19.0",
+    "webpack-cli": "^2.1.5",
     "webpack-node-externals": "^1.7.2",
     "zone.js": "^0.8.26"
   },
