--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@angular/common": "^5.0.0 || ^6.0.0 || ^7.0.0",
     "@angular/core": "^5.0.0 || ^6.0.0 || ^7.0.0",
     "@angular/forms": "^5.0.0 || ^6.0.0 || ^7.0.0",
-    "quill": "^1.3.6",
+    "quill": "^2.0.0-dev.3",
     "rxjs": "^5.5.2 || ^6.1.0 || ^6.3.0"
   },
   "devDependencies": {
@@ -63,7 +63,7 @@
     "@angular/platform-browser-dynamic": "^5.0.0 || ^6.0.0 || ^7.0.0",
     "@types/jasmine": "^2.8.9",
     "@types/node": "^10.12.0",
-    "@types/quill": "^1.3.10",
+    "@types/quill": "^2.0.1",
     "ajv": "^6.5.4",
     "codelyzer": "^4.5.0",
     "core-js": "^2.5.7",
@@ -80,7 +80,7 @@
     "loader-utils": "^1.1.0",
     "ng-packagr": "^4.4.0",
     "puppeteer": "^1.10.0",
-    "quill": "^1.3.6",
+    "quill": "^2.0.0-dev.3",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^5.5.2 || ^6.1.0 | ^6.3.0",
     "source-map-loader": "^0.2.4",
