--- a/package.json
+++ b/package.json
@@ -37,49 +37,49 @@
   "main": "./index.js",
   "typings": "index.d.ts",
   "dependencies": {
-    "@types/quill": "^1.3.3",
-    "quill": "^1.3.2"
+    "@types/quill": "1.3.3",
+    "quill": "1.3.2"
   },
   "peerDependencies": {
-    "@angular/core": "^2.4.1 || ^4.0.0",
-    "@angular/forms": "^2.4.1 || ^4.0.0",
-    "rxjs": "^5.0.1 || ^5.2.0"
+    "@angular/core": "2.4.1 || 4.0.0",
+    "@angular/forms": "2.4.1 || 4.0.0",
+    "rxjs": "5.0.1 || 5.2.0"
   },
   "devDependencies": {
-    "@angular/common": "^2.4.1 || ^4.0.0",
-    "@angular/compiler": "^2.4.1 || ^4.0.0",
-    "@angular/compiler-cli": "^2.4.1 || ^4.0.0",
-    "@angular/core": "^2.4.1 || ^4.0.0",
-    "@angular/forms": "^2.4.1 || ^4.0.0",
-    "@angular/platform-browser": "^2.4.1 || ^4.0.0",
-    "@angular/platform-browser-dynamic": "^2.4.1 || ^4.0.0",
-    "@types/jasmine": "^2.5.35",
-    "@types/node": "^6.0.45",
-    "awesome-typescript-loader": "^2.2.4 || ^3.1.2",
-    "codelyzer": "^3.0.0-beta.4",
-    "core-js": "^2.4.1",
-    "istanbul-instrumenter-loader": "^3.0.0",
-    "jasmine-core": "^2.8.0",
-    "karma": "^1.7.1",
-    "karma-coverage": "^1.1.1",
-    "karma-coverage-istanbul-reporter": "^1.3.0",
-    "karma-jasmine": "^1.1.0",
-    "karma-mocha-reporter": "^2.2.4",
-    "karma-phantomjs-launcher": "^1.0.4",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.4",
-    "loader-utils": "^1.1.0",
-    "reflect-metadata": "^0.1.10",
-    "rxjs": "^5.0.1 || ^5.2.0",
-    "source-map-loader": "^0.2.1",
-    "ts-helpers": "^1.1.2",
-    "tslint": "^4.0.0",
-    "tslint-loader": "^3.5.3",
-    "typescript": "~2.0.10 || ^2.2.0",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.8.2",
-    "webpack-node-externals": "^1.6.0",
-    "zone.js": "^0.7.8 || ^0.8.5"
+    "@angular/common": "2.4.1 || 4.0.0",
+    "@angular/compiler": "2.4.1 || 4.0.0",
+    "@angular/compiler-cli": "2.4.1 || 4.0.0",
+    "@angular/core": "2.4.1 || 4.0.0",
+    "@angular/forms": "2.4.1 || 4.0.0",
+    "@angular/platform-browser": "2.4.1 || 4.0.0",
+    "@angular/platform-browser-dynamic": "2.4.1 || 4.0.0",
+    "@types/jasmine": "2.5.35",
+    "@types/node": "6.0.45",
+    "awesome-typescript-loader": "2.2.4 || 3.1.2",
+    "codelyzer": "3.0.0-beta.4",
+    "core-js": "2.4.1",
+    "istanbul-instrumenter-loader": "3.0.0",
+    "jasmine-core": "2.8.0",
+    "karma": "1.7.1",
+    "karma-coverage": "1.1.1",
+    "karma-coverage-istanbul-reporter": "1.3.0",
+    "karma-jasmine": "1.1.0",
+    "karma-mocha-reporter": "2.2.4",
+    "karma-phantomjs-launcher": "1.0.4",
+    "karma-sourcemap-loader": "0.3.7",
+    "karma-webpack": "2.0.4",
+    "loader-utils": "1.1.0",
+    "reflect-metadata": "0.1.10",
+    "rxjs": "5.0.1 || 5.2.0",
+    "source-map-loader": "0.2.1",
+    "ts-helpers": "1.1.2",
+    "tslint": "4.0.0",
+    "tslint-loader": "3.5.3",
+    "typescript": "2.0.10 || 2.2.0",
+    "webpack": "3.6.0",
+    "webpack-dev-server": "2.8.2",
+    "webpack-node-externals": "1.6.0",
+    "zone.js": "0.7.8 || 0.8.5"
   },
   "contributors": [
     {
